feat(authentication_controller.rb): Remoção do CRUD de usuários + autenticação
