# config/routes.rb
@@ -5,7 +5,6 @@ Rails.application.routes.draw do
   get "up" => "rails/health#show", as: :rails_health_check
 
   namespace :sub do
-    resources :users
     resources :subscription_plans, path: 'plan'
     resources :subscriptions, path: 'subscription' do
       member do
@@ -15,4 +14,9 @@ Rails.application.routes.draw do
       end
     end
   end
+
+  post 'authenticate', to: 'authentication#authenticate'
+  post 'refresh_token', to: 'authentication#refresh_token'
+  get 'secured_action', to: 'authentication#secured_action'
+  get 'get_user_info', to: 'authentication#get_user_info'
 end
